hphp/test/slow/parser/hh-reserved-name-real-2.php.expectf
Fatal error: Cannot use 'HH\Real' as class name as it is reserved in %s on line 4
